tdf#115067: NBSP blank portions should be created differently

Change-Id: I9516340a488f5e1d060dbe5f510eb85030d75ddc